--- a/views/ejsFile/create.ejs
+++ b/views/ejsFile/create.ejs
@@ -2,19 +2,21 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Create Page</title>
   </head>
   <body>
+    <h1>Create Page</h1>
     <form class="" action="/create" method="post">
-      <label for="name">name</label>
-      <input type="text" name="name" id="name" value="">
-      <label for="call">phone-number</label>
-      <input type="text" name="call" id="call" value="">
-      <label for="address">address</label>
-      <input type="text" name="address" id="address" value="">
-      <label for="age">age</label>
-      <input type="text" name="age" id="age" value="">
+      <label for="name">Name</label> <br>
+      <input type="text" name="name" id="name"> <br>
+      <label for="call">Phone-Number</label> <br>
+      <input type="text" name="call" id="call"> <br>
+      <label for="address">Address</label> <br>
+      <input type="text" name="address" id="address"> <br>
+      <label for="age">Age</label> <br>
+      <input type="text" name="age" id="age"> <br> <br>
       <input type="submit" name="submit" value="submit">
-    </form>
+    </form> <br>
+    <a href="/">Index Page</a>
   </body>
 </html>
