--- a/views/ejsFile/index.ejs
+++ b/views/ejsFile/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Index Page</title>
     <link rel="stylesheet" href="/css/master.css">
 </head>
 <body>
