--- a/views/ejsFile/index.ejs
+++ b/views/ejsFile/index.ejs
@@ -1,21 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <title>Index Page</title>
-    <link rel="stylesheet" href="/css/master.css">
+    <%- include('../clude/head') %>
 </head>
 <body>
-  <h1>callbook</h1>
-    <p><a href="/ejsFile/create">go create</a></p>
-    <ul>
-      <% callbooks.forEach(function(callbook) { %>
-        <li>
-          <p><a href="/ejsFile/show/<%= callbook._id %> ">
-             Name : <%= callbook.name %></a></p>
-          <p>Phone number : <%= callbook.call %></p>
-        </li>
-    <%  }) %>
-    </ul>
+  <%- include('../clude/left-nav') %>
 </body>
 </html>
